--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "dependencies": {
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "element-ui": "^2.4.5",
     "highlight.js": "^10.1.2",
     "marked": "^1.1.1",
     "mavon-editor": "^2.9.0",
     "valine": "^1.4.14",
     "vue": "^2.6.12",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
@@ -34,7 +36,8 @@
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "browserslist": [
     "> 1%",
